# compphys

./: .gitignore  README.md
alpha_decay/report/: main.aux  main.bbl  main.bcf  main.fdb_latexmk  main.fls  main.tex  main.toc  ref.bib
alpha_decay/results/: res.txt
alpha_decay/src/: alphadecay.py  main.py  parameter_study.py
apw/report/: main.tex  ref.bib
apw/results/: det.txt  muffintin_l0.txt  muffintin_l1.txt  muffintin_l10.txt  muffintin_l2.txt  muffintin_l3.txt  muffintin_l4.txt  muffintin_l5.txt  muffintin_l6.txt  muffintin_l7.txt  muffintin_l8.txt  muffintin_l9.txt  test_l0.txt  test_l1.txt  test_l2.txt  test_l3.txt  true.txt
apw/results/det_DOS_2/: det_-0.094740_-0.094740_-0.094740.txt  det_-0.094740_-0.094740_-0.284221.txt  det_-0.094740_-0.094740_-0.473702.txt  det_-0.094740_-0.094740_-0.663183.txt  det_-0.094740_-0.094740_-0.852664.txt  det_-0.094740_-0.094740_0.094740.txt  det_-0.094740_-0.094740_0.284221.txt  det_-0.094740_-0.094740_0.473702.txt  det_-0.094740_-0.094740_0.663183.txt  det_-0.094740_-0.189481_-0.189481.txt  det_-0.094740_-0.189481_-0.378962.txt  det_-0.094740_-0.189481_-0.568443.txt  det_-0.094740_-0.189481_-0.757923.txt  det_-0.094740_-0.189481_0.000000.txt  det_-0.094740_-0.189481_0.189481.txt  det_-0.094740_-0.189481_0.378962.txt  det_-0.094740_-0.189481_0.568443.txt  det_-0.094740_-0.284221_-0.094740.txt  det_-0.094740_-0.284221_-0.284221.txt  det_-0.094740_-0.284221_-0.473702.txt  det_-0.094740_-0.284221_-0.663183.txt  det_-0.094740_-0.284221_0.094740.txt  det_-0.094740_-0.284221_0.284221.txt  det_-0.094740_-0.284221_0.473702.txt  det_-0.094740_-0.378962_-0.189481.txt  det_-0.094740_-0.378962_-0.378962.txt  det_-0.094740_-0.378962_-0.568443.txt  det_-0.094740_-0.378962_0.000000.txt  det_-0.094740_-0.378962_0.189481.txt  det_-0.094740_-0.378962_0.378962.txt  det_-0.094740_-0.473702_-0.094740.txt  det_-0.094740_-0.473702_-0.284221.txt  det_-0.094740_-0.473702_-0.473702.txt  (+967 more)
apw/src/: CMakeLists.txt
apw/src/c/: apw.cpp  apw.h  atom.cpp  atom.h  b_splines.cpp  b_splines.h  collocation.cpp  collocation.h  main.cpp  spherical_seq.cpp  spherical_seq.h
apw/src/py/: asetest.py  espresso.pwi  plotting.py
earth_temp/report/: main.tex
earth_temp/src/: main.py  physics.py  plotting.py
eig_1/report/: main.tex  ref.bib
eig_1/results/: occupation.txt  squared_positions.txt
eig_1/src/: CMakeLists.txt
eig_1/src/c/: benchmark.cpp  benchmark.h  discrete_hamiltonian.cpp  discrete_hamiltonian.h  inverse_iteration.cpp  inverse_iteration.h  main.cpp  observables.cpp  observables.h  out.cpp  out.h  potentials.cpp  potentials.h  solve.cpp  solve.h
eig_1/src/py/: plotting.py
eig_splines/report/: main.tex
eig_splines/results/: gs_err.txt  gs_err2.txt  ns.txt  ns2.txt
eig_splines/src/: CMakeLists.txt
eig_splines/src/c/: b_splines.h  main.cpp  potentials.h  spherical_seq.h
eig_splines/src/py/: plotting.py
periodictab/report/: main.tex  ref.bib
periodictab/results/: exact.csv  ionergs.txt  ionergs2.txt  test.txt
periodictab/src/: CMakeLists.txt
periodictab/src/c/: atom.h  collocation.h  main.cpp  spherical_seq.h
periodictab/src/py/: plotting.py
poisson_colloc/report/: main.tex  ref.bib
poisson_colloc/src/: CMakeLists.txt
qmc/report/: main.tex
qmc/results/: lambda_sweep.txt
qmc/src/: CMakeLists.txt
qmc/src/c/: main.cpp  monte_carlo.cpp  monte_carlo.h  monte_carlo_1d.cpp  monte_carlo_1d.h  trial_functions.cpp  trial_functions.h
qmc/src/py/: plotting.py
(+14596 files in other folders)
